# sommelier

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: main.yaml
docs/: index.md
src/sommelier/: __init__.py  sommelier.py
tests/: test_sommelier.py
